--- a/loansapp/src/App.scss
+++ b/loansapp/src/App.scss
@@ -1,3 +1,4 @@
+@import "../node_modules/bootstrap/scss/bootstrap";
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
